added simple support for java.awt.Color to ExtensionDescriptorMapper #30